fix on incomplete csv

--- a/relation-online/index.html
+++ b/relation-online/index.html
@@ -144,7 +144,7 @@ var openFile = function(event) {
       else
       {
       	filelist[input.files[0].name] = reader.result;
-      	console.log(filelist);
+      	//console.log(filelist);
       	buildFileList();
       }
     };
